Fix unzoom button is out of screen on small devices in Calligra

--- a/activities/Calligra.activity/css/activity.css
+++ b/activities/Calligra.activity/css/activity.css
@@ -33,7 +33,7 @@ button:disabled {
 	width: 45px;
 	height: 45px;
 	top: 0;
-	left: 95%;
+	right: 5%;
 	position: absolute;
 	visibility: hidden;
 	z-index: 5;
